--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "SENDGRID_API_KEY":  "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"
+  
 }
