--- a/appsettings.json
+++ b/appsettings.json
@@ -6,6 +6,9 @@
     }
   },
   "AllowedHosts": "*",
-  "SENDGRID_API_KEY":  "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"
+
+  "SendGrid": {
+    "SecretKey": "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"
+  }
   
 }
