--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
 
   "SendGrid": {
-    "SecretKey": "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"
+    "SecretKey": ""
   }
   
 }
